force-app/main/messaging/objects/Notification__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notifications (From)</relationshipLabel>
    <relationshipName>Notifications1</relationshipName>
    <type>Lookup</type>
</CustomField>