force-app/main/messaging/objects/Notification__c/fields/IsDelegate__c.field-meta.xml
<CustomField>
    <fullName>IsDelegate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Delegate</label>
    <type>Checkbox</type>
</CustomField>