force-app/main/messaging/objects/Notification__c/fields/RemindUsing__c.field-meta.xml
<CustomField>
    <fullName>RemindUsing__c</fullName>
    <label>RemindUsing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>