force-app/main/messaging/objects/Notification__c/fields/Target_User_Group__c.field-meta.xml
<CustomField>
    <fullName>Target_User_Group__c</fullName>
    <label>Target User Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PI Delegate L1</fullName>
            </value>
            <value>
                <fullName>PI Delegate L2</fullName>
            </value>
            <value>
                <fullName>Pi Delegate L3</fullName>
            </value>
            <value>
                <fullName>RP</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Participant Delegate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>