force-app/main/messaging/objects/Notification__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <description>store the id of task record.</description>
    <label>Task Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>