force-app/main/messaging/objects/Notification__c/fields/Time_Delay_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_Delay_Status__c</fullName>
    <label>Time Delay Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>