force-app/main/messaging/objects/Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Notification_Type__c</columns>
    <columns>WhatId__c</columns>
    <columns>Recipient__c</columns>
    <columns>Topic__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>